--- a/BoxinatorVim/src/main/resources/application.properties
+++ b/BoxinatorVim/src/main/resources/application.properties
@@ -1,6 +1,5 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/boxinatorWork
-spring.datasource.username= postgres
-spring.datasource.password= postgres
+spring.datasource.url=${DATABASE_URL}
+
 
 # Hibernate behaviour
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL95Dialect
@@ -12,4 +11,4 @@ logging.level.org.hibernate.stat=debug
 
 # Enable logging
 spring.jpa.show-sql=true
-server.port=8080
+
