--- a/BoxinatorVim/build.gradle
+++ b/BoxinatorVim/build.gradle
@@ -7,7 +7,7 @@ plugins {
 jar {
     manifest {
         attributes(
-                'Main-Class': 'com.example.demo.BoxinatorVimApplication.java'
+                'Main-Class': 'com.example.demo.BoxinatorVimApplication'
         )
     }
 }
